# mcp-harness

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: eval-case-technical-design.md
evals/: tool_specs.yaml
evals/cases/customization/: cx-availability.yaml  cx-combo-constraint.yaml  cx-constraint.yaml  cx-default.yaml
evals/cases/error-recovery/: er-basic.yaml
evals/cases/multi-turn/: mt-cancel-restart.yaml  mt-incremental-order.yaml  mt-long-context.yaml  mt-modify-rollback.yaml  mt-multi-item.yaml
evals/cases/param-extraction/: pe-alias.yaml  pe-combo.yaml  pe-disambiguation.yaml  pe-modifier.yaml  pe-quantity.yaml
evals/cases/param-mapping/: pm-size-mapping.yaml
evals/cases/safety/: sf-auth-ext.yaml  sf-boundary.yaml  sf-duplicate.yaml  (+2 more)
evals/optimized/: optimization_log.yaml  optimized_tools.yaml
evals/reports/: claude-code-eval-v2.yaml  claude-code-eval-v3.yaml  claude-code-eval-v4.yaml  claude-code-eval.yaml
fids/: fid-001-voice-add-item.yaml
harness/: fingerprint.py
harness/agent/: __init__.py  behavior.py  comparator.py  trace.py
harness/eval/: case_loader.py  harness.py  judge.py  mock_tools.py  report.py
harness/lint/: mcp_schema_lint.py
harness/optimizer/: loop.py
scripts/: eval_inline.py  extract_tools.py  run_eval.py  run_optimize.py
skills/mcp-quality/: SKILL.md
skills/org/: mcp-server-standards.md
skills/project/: sprint-context.md
skills/team/: coffee-order-domain.md
tests/: test_agent_behavior.py  test_case_loader.py  test_eval_harness.py  test_mock_tools.py  test_optimizer.py  test_schema_lint.py
(+12 files in other folders)
